mockup/css/main.css
body {
    margin: 0;
    background-color: #050505 !important;
    color: #FFE8EE !important;
    font-family: 'Roboto', sans-serif !important;
    font-weight: 300 !important;
}

.header {
    width: 100vw;
    #background-color: #0F0F0F;
    overflow: auto;
    border-bottom: solid 2px #363636;
}

.header-btn {
    padding: 0.75em 0.75em 0.35em;
    float: left;
}

.header-btn svg {
    height: 2em;
    width: auto;
    fill: #fff;
}
.container-body {
    padding: 2em;
    border-bottom: solid 2px #363636;
}
::-webkit-scrollbar-track
{
	background-color: #050505;
}

::-webkit-scrollbar
{
    width: 6px;
    height: 2px;
	background-color: #050505;
}

::-webkit-scrollbar-thumb
{
	background-color: #050505;
}

.slider-track, .slider-selection {
    width: 3.5em !important;
    border: solid 1px #363636;
    background: #8e44ad !important;
}
.slider-selection {
    background: #050505 !important;
}
.slider-handle {
    width: 4.2em !important;
    background: rgba(0, 0, 0, 0.2%) !important;
}
.slider-handle.round {
    border-radius: 10%;
    background: rgba(0, 0, 0, 0.2%) !important;
}
.slider-value {
    font-size: 0.6em;
    margin-top: 2em;
    border: solid 1px #363636;
    border-radius: 7px;
    padding: 0.5em;
    width: 70px;
    text-align: center;
}

.slider-button {
    font-size: 0.6em;
    margin-bottom: 1em;
    border: solid 1px #363636;
    border-radius: 7px;
    padding: 0.5em;
    width: 66px;
    text-align: center;
}

.slider-button:hover {
    background-color: #363636 !important;
    cursor: pointer;
}

.slider-button a {
    text-decoration: none;
    color: #fff;
}
.row-fluid{
    white-space: nowrap;
}
.row-fluid .col-sm-1{
    display: inline-block;
    max-width: 35% !important;
}
.nav-pills .nav-link {
    border: solid 1px #363636 !important;
    margin-right: 0.5em;
    padding: 0.25em 0.5em;
}
.nav-pills .nav-item.show .nav-link, .nav-pills .nav-link.active {
    background-color: #363636;
}
.nav-pills .nav-item a {
    color: #fff;
}
.section-left {
    border-right: solid 2px #363636;
}
.tab-pane .row .col-1 {
    margin-top: 1em;
}
.tombstone {
    border: solid 2px #363636;
    border-radius: 25%;
    text-align: center;
    min-width: 2.25em;
}

.ts-title {
    text-decoration: underline;
}

.ts-value {
    font-size: 1.5em;
    color: #e74c3c;
}

.btn-ui {
    border: solid 1px #363636;
    background-color: #050505;
    color: #fff;
}

.btn-ui:hover {
    background-color: #363636;
    cursor: pointer;
}

.input-ui {
    border: solid 1px #363636;
    background-color: #050505;
    color: #fff;
}
.keypad-btn {
    font-size: 1.5em;
}
@media screen and (max-width: 509px) {
    .row-fluid .col-sm-1{
        max-width: 35% !important;
    }
    #sliders {
        padding: 1em;
        padding-left: 0.3em;
        border-bottom: solid 2px #363636;
    }
}

@media screen and (min-width: 510px) {
    .row-fluid .col-sm-1{
        max-width: 17% !important;
    }
}

@media screen and (min-width: 768px) {
    .row-fluid .col-sm-1{
        max-width: 7% !important;
    }
}

@media screen and (min-width: 770px) {
    .row-fluid .col-sm-1{
        max-width: 10% !important;
    }
}

